--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -16,6 +16,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.uuhnaut69</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
