--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8090
 spring:
   application:
-    name: inventory-application
+    name: order-application
   data:
     mongodb:
       database: inventory
