--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>inventory-service</module>
+        <module>common</module>
+        <module>order-service</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -57,5 +59,21 @@
             <artifactId>axon-spring-boot-starter</artifactId>
             <version>4.5.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.axonframework.extensions.reactor/axon-reactor-spring-boot-starter -->
+        <dependency>
+            <groupId>org.axonframework.extensions.reactor</groupId>
+            <artifactId>axon-reactor-spring-boot-starter</artifactId>
+            <version>4.5</version>
+        </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.uuhnaut69</groupId>
+                <artifactId>common</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
