:coffee: Add customer-service query side

--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.uuhnaut69</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
